--- a/config.toml
+++ b/config.toml
@@ -1,2 +1,2 @@
-siteTitle="Gatsby Starter Site"
-linkPrefix = "/gatsby-starter-default"
+siteTitle="Refactor Camp"
+linkPrefix = "/refactor-camp-website"
